    package. (Closes: #726172)
  * Apply patch from Boost upstream to resolve BOOST_LCAST_HAS_INT128
    issue (#8790) (Closes: #727750)

  [ Steve M. Robbins ]
  * rules: Disable context for mips64 and mips64el.  Closes: #728616.
  * patches/hppa-long-double-config.patch: New.  Fixes definition of
    BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS for hppa (thanks, Dave
    Anglin).  Closes: #729479.

  [ Matthias Klose ]
  * Add support for powerpc ELFv2.

 -- Steve M. Robbins <smr@debian.org>  Sun, 01 Dec 2013 01:26:56 -0600

boost1.54 (1.54.0-3) unstable; urgency=low

  [ Steve M. Robbins ]
  * control: Add depends on libboost1.54-dev omitted from recently added
    libraries (atomic, context, and coroutine).
  * patches/boost-1.54.0-thread-link_atomic.patch: New.  Link Boost.Thread
    to Boost.Atomic if necessary.  Closes: #721577, #721544.  Also have
    libboost-thread1.54-dev depend on libboost-atomic1.54-dev.
  * control: fix short description of libboost-exception1.54-dev; see
    #720160.

  [ Matthias Klose ]
  * Configure with --disable-long-double --wihtout-context on Aarch64

  [ Dmitrijs Ledkovs ]
  * Use anonscm URLs.
  * libboost-dev: Specify dependency on current libstdc++6-4.8-dev,
    instead of obsolete libstdc++6-4.4-dev. Fixes Multi-Arch
    installation (LP: #1209193)
  * Specify --with-icu=/usr to unconditionally trigger HAVE_ICU define,
    i.e. independent of icu multiarch.

 -- Steve M. Robbins <smr@debian.org>  Wed, 04 Sep 2013 22:29:56 -0500

boost1.54 (1.54.0-2) unstable; urgency=low

  * Add packages for Boost.Coroutine.  Both coroutine and context are
    conditionally compiled.

  * patches/001-coroutine.patch:
  * patches/002-date-time.patch: New.  Upstream maintenance fixes from
    http://www.boost.org/patches/.

  * patches/hurd-clock-gettime.patch: New.  GNU Hurd has clock_gettime()
    despite not defining _POSIX_TIMERS.  Closes: #714847.
  
 -- Steve M. Robbins <smr@debian.org>  Sat, 06 Jul 2013 19:52:17 -0500
